--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 sounds/
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354200.meta
+cost.png
+wavenet-plath-168600.wav
+wavenet-plath-200.wav
+wavenet-plath-246800.wav
+wavenet-plath-296300.wav
+wavenet-plath-30100.wav
+wavenet-plath-354400.wav
+wavenet-plath-6200.wav
+wavenet-plath-83600.wav
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/checkpoint
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/events.out.tfevents.1514053163.Leopard-WS
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354000.data-00000-of-00001
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354000.index
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354000.meta
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354100.data-00000-of-00001
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354100.index
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354100.meta
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354200.data-00000-of-00001
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354200.index
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354300.data-00000-of-00001
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354300.index
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354300.meta
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.data-00000-of-00001
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.index
+plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.meta
