--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidd
 plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.data-00000-of-00001
 plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.index
 plath-wavenet/wavenet_filterlen2_batchsize2_sequencelen7168_stages7_layers9_hidden48_skips384/model.ckpt-354400.meta
+__pycache__/wavenet_plath.cpython-35.pyc
